IGNITE-28630: migration to newer version continued