@@ -35,13 +35,5 @@ processResources {
 
 test {
     // set JVM arguments for the test JVM(s)
-    jvmArgs "-XX:+IgnoreUnrecognizedVMOptions",
-        "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
-        "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
-        "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED"
+    jvmArgs igniteJava17JvmArgs
 }
